--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ chainlit = "^1.2.0"
 openai = "^1.51.2"
 swarm = {git = "https://github.com/openai/swarm.git"}
 langchain-community = "^0.3.2"
+tiktoken = "^0.8.0"
 
 
 [build-system]
