--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,12 @@ openai = "^1.51.2"
 swarm = {git = "https://github.com/openai/swarm.git"}
 langchain-community = "^0.3.2"
 tiktoken = "^0.8.0"
+requests = "^2.32.3"
+beautifulsoup4 = "^4.12.3"
+langchain = "^0.3.7"
+pinecone-client = "^5.0.1"
+langchain-openai = "^0.2.9"
+html2text = "^2024.2.26"
 
 
 [build-system]
