--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,12 +7,25 @@ license = "Apache License 2.0"
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.10"
+python = ">=3.10,<3.13"
 chainlit = "^1.2.0"
 openai = "^1.51.2"
 swarm = {git = "https://github.com/openai/swarm.git"}
 langchain-community = "^0.3.2"
 tiktoken = "^0.8.0"
+kfp = "^2.11.0"
+pinecone = {extras = ["grpc"], version = "^5.3.1"}
+pinecone-plugin-assistant = "^0.3.0"
+pinecone-client = "^5.0.1"
+llama-index = "^0.12.3"
+llama-index-vector-stores-pinecone = "^0.4.1"
+llama-index-llms-openai = "^0.3.2"
+langchain-openai = "^0.3.0"
+langchain-experimental = "^0.3.4"
+
+
+[tool.poetry.group.dev.dependencies]
+notebook = "^7.3.2"
 
 
 [build-system]
