--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,8 +7,8 @@ license = "Apache License 2.0"
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = ">=3.10,<3.13"
-chainlit = "^1.2.0"
+python = ">=3.11,<3.13"
+chainlit = "1.3.2"
 openai = "^1.51.2"
 swarm = {git = "https://github.com/openai/swarm.git"}
 langchain-community = "^0.3.2"
@@ -22,6 +22,8 @@ llama-index-vector-stores-pinecone = "^0.4.1"
 llama-index-llms-openai = "^0.3.2"
 langchain-openai = "^0.3.0"
 langchain-experimental = "^0.3.4"
+pypdf = "^5.1.0"
+pydantic = "2.10.1"
 
 
 [tool.poetry.group.dev.dependencies]
