--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,8 @@ authors = ["George Fatouros <gfatouros@innov-acts.com>"]
 license = "Apache License 2.0"
 readme = "README.md"
 
+package-mode = false
+
 [tool.poetry.dependencies]
 python = ">=3.11,<3.13"
 chainlit = "1.3.2"
