--- a/kubeflow/diabetes_svm_classification_pipeline_minio.yaml
+++ b/kubeflow/diabetes_svm_classification_pipeline_minio.yaml
@@ -11,7 +11,6 @@
 #    minio_endpoint: str [Default: 's3-minio.humaine-horizon.eu']
 #    pipeline_name: str [Default: 'diabetes-svm-classification']
 #    random_state: int [Default: 42.0]
-#    run_name: str [Default: '']
 #    svm_C: float [Default: 1.0]
 #    svm_kernel: str [Default: 'rbf']
 #    test_size: float [Default: 0.3]
@@ -1719,7 +1718,8 @@ root:
             random_state:
               componentInputParameter: random_state
             run_id:
-              componentInputParameter: run_name
+              runtimeValue:
+                constant: run-20250506-211017
             svm_C:
               componentInputParameter: svm_C
             svm_kernel:
@@ -1813,7 +1813,8 @@ root:
             pipeline_name:
               componentInputParameter: pipeline_name
             run_id:
-              componentInputParameter: run_name
+              runtimeValue:
+                constant: run-20250506-211017
         taskInfo:
           name: save-to-minio
       save-to-minio-2:
@@ -1846,7 +1847,8 @@ root:
             pipeline_name:
               componentInputParameter: pipeline_name
             run_id:
-              componentInputParameter: run_name
+              runtimeValue:
+                constant: run-20250506-211017
         taskInfo:
           name: save-to-minio-2
       save-to-minio-3:
@@ -1879,7 +1881,8 @@ root:
             pipeline_name:
               componentInputParameter: pipeline_name
             run_id:
-              componentInputParameter: run_name
+              runtimeValue:
+                constant: run-20250506-211017
         taskInfo:
           name: save-to-minio-3
       save-to-minio-4:
@@ -1912,7 +1915,8 @@ root:
             pipeline_name:
               componentInputParameter: pipeline_name
             run_id:
-              componentInputParameter: run_name
+              runtimeValue:
+                constant: run-20250506-211017
         taskInfo:
           name: save-to-minio-4
       save-to-minio-5:
@@ -1945,7 +1949,8 @@ root:
             pipeline_name:
               componentInputParameter: pipeline_name
             run_id:
-              componentInputParameter: run_name
+              runtimeValue:
+                constant: run-20250506-211017
         taskInfo:
           name: save-to-minio-5
       save-to-minio-6:
@@ -1978,7 +1983,8 @@ root:
             pipeline_name:
               componentInputParameter: pipeline_name
             run_id:
-              componentInputParameter: run_name
+              runtimeValue:
+                constant: run-20250506-211017
         taskInfo:
           name: save-to-minio-6
       save-to-minio-7:
@@ -2011,7 +2017,8 @@ root:
             pipeline_name:
               componentInputParameter: pipeline_name
             run_id:
-              componentInputParameter: run_name
+              runtimeValue:
+                constant: run-20250506-211017
         taskInfo:
           name: save-to-minio-7
       split-data:
@@ -2094,10 +2101,6 @@ root:
         defaultValue: 42.0
         isOptional: true
         parameterType: NUMBER_INTEGER
-      run_name:
-        defaultValue: ''
-        isOptional: true
-        parameterType: STRING
       svm_C:
         defaultValue: 1.0
         isOptional: true
