Enhance HumAIne Swarm Assistant with OAuth support, update dependencies, and improve user session management. Added custom Keycloak OAuth provider, modified environment configuration, and refined API functions. Removed deprecated Node-RED scraper classes and adjusted pipeline functions to require bucket_name parameter. Updated translations and documentation for clarity.

--- a/.gitignore
+++ b/.gitignore
@@ -2,10 +2,10 @@
 __pycache__/
 *.py[cod]
 *$py.class
-
+.chainlit/translations/
 # C extensions
 *.so
-
+.DS_Store
 # Distribution / packaging
 .Python
 build/
@@ -171,3 +171,7 @@ test_data/
 
 transcript.py
 speech.mp3
+.vscode/
+__pycache__/
+
+transcript_stt.py
