Add .dockerignore to exclude unnecessary files and directories from Docker builds. Remove custom OAuth provider and related classes to streamline authentication process. Update environment configuration for Keycloak and MinIO. Refactor Kubeflow client management to support user credentials and improve error handling in function calls.

--- a/env.sh.example
+++ b/env.sh.example
@@ -2,57 +2,31 @@
 # Copy this file to env.sh and fill in your actual values
 # DO NOT commit env.sh with real credentials to version control
 
-# Required: Chainlit authentication secret (generate a secure random string)
-export CHAINLIT_AUTH_SECRET="your-secure-random-string-here"
+# OpenAI API Configuration
+export OPENAI_API_KEY=your-openai-api-key
 
-# Required: OpenAI API credentials
-export OPENAI_API_KEY="your-openai-api-key"
-export OPENAI_BASE_URL="https://api.openai.com/v1"
-
-# Required: Pinecone vector database credentials
-export PINECONE_API_KEY="your-pinecone-api-key"
+# Pinecone Vector Database
+export PINECONE_API_KEY=pour-pinecone-api-key
 
 # Keycloak OAuth Configuration for Chainlit
-# These are required for user authentication via Keycloak SSO
-export OAUTH_KEYCLOAK_CLIENT_ID="your-keycloak-client-id"
-export OAUTH_KEYCLOAK_CLIENT_SECRET="your-keycloak-client-secret"
-export OAUTH_KEYCLOAK_REALM="your-realm-name"
-export OAUTH_KEYCLOAK_BASE_URL="https://keycloak.your-domain.com"
+export OAUTH_KEYCLOAK_CLIENT_ID="minio"
+export OAUTH_KEYCLOAK_CLIENT_SECRET="your-keycloak-client-id"
+export OAUTH_KEYCLOAK_REALM="humaine"
+export OAUTH_KEYCLOAK_BASE_URL="https://keycloak.humaine-horizon.eu"
 export OAUTH_KEYCLOAK_NAME="keycloak"
 
 # MinIO Configuration
-export MINIO_ENDPOINT="s3-minio.your-domain.com"
+export MINIO_ENDPOINT="s3-minio.humaine-horizon.eu"
 export MINIO_SECURE="true"
-# Optional: MinIO STS (Security Token Service) configuration
-# When MINIO_SECURE is true: STS requests use HTTPS on default port (443)
-#   - Requests go through reverse proxy which routes to MinIO
-#   - This matches the old working approach from the legacy env.sh script
-# When MINIO_SECURE is false: STS requests use HTTP on port 9000 (direct API access)
-# You can override the STS endpoint explicitly if your setup is different:
-# export MINIO_STS_ENDPOINT="https://s3-minio.your-domain.com"  # Full STS URL (overrides default behavior)
-# Note: MINIO_BUCKET is now optional. Users should specify bucket_name explicitly
-# when calling MinIO functions, as different users may have access to different buckets
-# based on their policies. Use list_user_buckets() to discover accessible buckets.
-# export MINIO_BUCKET="your-default-bucket"
 
-# Keycloak settings (for MinIO token exchange)
-export KEYCLOAK_URL="https://keycloak.your-domain.com/realms/your-realm/protocol/openid-connect/token"
-export KEYCLOAK_CLIENT_ID="minio"
-export KEYCLOAK_CLIENT_SECRET="your-client-secret"
+# Kubeflow Configuration (TODO: base URL only - user credentials via OAuth)
+export KUBEFLOW_HOST="http://huanew-kubeflow.ddns.net/pipeline"
 
-# Kubeflow Configuration (base URL only - user credentials via OAuth)
-export KUBEFLOW_HOST="http://your-kubeflow-host/pipeline"
-
-# Optional: Legacy credentials for local development/testing only
-# These should NOT be used in production - OAuth handles authentication
-# Uncomment only if you need to test without OAuth
-# export KUBEFLOW_USERNAME="your-username"
-# export KUBEFLOW_PASSWORD="your-password"
-# export KUBEFLOW_NAMESPACE="your-namespace"
+# Logging Configuration
+# Valid values: DEBUG, INFO, WARNING, ERROR, CRITICAL
+export LOG_LEVEL="ERROR"
 
 # Set Python path to current directory
 export PYTHONPATH=$(pwd)
 
-echo "Environment configured for OAuth-based authentication."
-echo "Users will authenticate via Keycloak SSO."
-echo "MinIO and Kubeflow credentials are fetched per-user at runtime."
+echo "Environment configured. MinIO credentials will be fetched per-user via OAuth."
