--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ pypdf = "^5.1.0"
 pydantic = "^2.11.5"
 minio = "^7.2.15"
 boto3 = "^1.37.22"
+plotly = "^5.24.1"
 # tensorflow = "^2.19.0"
 # matplotlib = "^3.10.1"
 # seaborn = "^0.13.2"
