--- a/.chainlit/config.toml
+++ b/.chainlit/config.toml
@@ -22,6 +22,11 @@ mask_user_env = true
 # Authorized origins
 allow_origins = ["*"]
 
+# WebSocket transport configuration for Docker/load balancer compatibility
+# Use websocket-only transport for better consistency with load balancers
+# Even with sticky sessions, load balancers sometimes struggle to route consistently
+transports = ["websocket"]
+
 [features]
 # Process and display HTML in messages. This can be a security risk (see https://stackoverflow.com/questions/19603097/why-is-it-dangerous-to-render-user-generated-html-or-javascript)
 unsafe_allow_html = false
