Update example environment configuration files

--- a/.env-example
+++ b/.env-example
@@ -2,30 +2,21 @@
 # Copy this file to .env and fill in your actual values
 # DO NOT commit .env with real credentials to version control
 
-# OpenAI API Configuration
-OPENAI_API_KEY=your-openai-api-key
-
-# Pinecone Vector Database
-PINECONE_API_KEY=your-pinecone-api-key
+OPENAI_API_KEY=<OPENAI_API_KEY>
+PINECONE_API_KEY=<PINECONE_API_KEY>
+PINECONE_ENVIRONMENT=gcp-starter
 
 # Keycloak OAuth Configuration for Chainlit
 OAUTH_KEYCLOAK_CLIENT_ID=minio
-OAUTH_KEYCLOAK_CLIENT_SECRET=your-keycloak-client-secret
+OAUTH_KEYCLOAK_CLIENT_SECRET=<KEYCLOAK_CLIENT_SECRET>
 OAUTH_KEYCLOAK_REALM=humaine
 OAUTH_KEYCLOAK_BASE_URL=https://keycloak.humaine-horizon.eu
 OAUTH_KEYCLOAK_NAME=keycloak
 
 # MinIO Configuration
-MINIO_ENDPOINT=s3-minio.humaine-horizon.eu
 MINIO_SECURE=true
+MINIO_ENDPOINT=minio.humaine-horizon.eu
 
-# Kubeflow Configuration
-KUBEFLOW_HOST=http://huanew-kubeflow.ddns.net/pipeline
-
-# Logging Configuration
-# Valid values: DEBUG, INFO, WARNING, ERROR, CRITICAL
-LOG_LEVEL=ERROR
-
-# Python path (set automatically in Docker container)
-PYTHONPATH=/app
+# Kubeflow Configuration 
+KUBEFLOW_HOST=https://kubeflow.humaine-horizon.eu/pipeline
 
