--- a/env.sh.example
+++ b/env.sh.example
@@ -20,7 +20,7 @@ export MINIO_ENDPOINT="s3-minio.humaine-horizon.eu"
 export MINIO_SECURE="true"
 
 # Kubeflow Configuration (TODO: base URL only - user credentials via OAuth)
-export KUBEFLOW_HOST="http://huanew-kubeflow.ddns.net/pipeline"
+export KUBEFLOW_HOST="https://kubeflow.humaine-horizon.eu/pipeline"
 
 # Logging Configuration
 # Valid values: DEBUG, INFO, WARNING, ERROR, CRITICAL
