Add CHAINLIT_AUTH_SECRET to example environment configuration files

--- a/.env-example
+++ b/.env-example
@@ -2,6 +2,8 @@
 # Copy this file to .env and fill in your actual values
 # DO NOT commit .env with real credentials to version control
 
+CHAINLIT_AUTH_SECRET="chainlit_secret_not_used"
+
 OPENAI_API_KEY=<OPENAI_API_KEY>
 PINECONE_API_KEY=<PINECONE_API_KEY>
 PINECONE_ENVIRONMENT=gcp-starter
