--- a/env.sh.example
+++ b/env.sh.example
@@ -2,6 +2,8 @@
 # Copy this file to env.sh and fill in your actual values
 # DO NOT commit env.sh with real credentials to version control
 
+export CHAINLIT_AUTH_SECRET="chainlit_secret_not_used"
+
 # OpenAI API Configuration
 export OPENAI_API_KEY=your-openai-api-key
 
