--- a/.gitignore
+++ b/.gitignore
@@ -160,6 +160,8 @@ dmypy.json
 
 # Cython debug symbols
 cython_debug/
+kubeflow_artifacts/
+kubeflow_artifacts/*
 
 # PyCharm
 #  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
